remove old style

--- a/cleaned/11.md
+++ b/cleaned/11.md
@@ -19,5 +19,5 @@ Einrichtungen in der Region.
 -   [Ev. Beratungstelle
     Süderelbe](http://www.beratungsstelle-suederelbe.de)
 -   [VT Aurubis](http://vt-aurubis-hamburg.de)
--   [![](/img/wsb_143x41_Hamburg.de.jpg)](http://www.hamburg.de)
+-   [Hansestadt Hamburg](http://www.hamburg.de)
 
