fix linebreaks and other stuff

--- a/cleaned/19.md
+++ b/cleaned/19.md
@@ -16,9 +16,9 @@ des Süderelbe-Archivs: <info@suederelbe-archiv.de> - vielen Dank!
 
 ## Termine der Arbeitsgruppentreffen in der Bücherhalle Neugraben in 2017
 
--   8\. Juni 2017
--   13\. Juli 2017
--   14\. September 2017
+-   8 . Juni 2017
+-   13 . Juli 2017
+-   14 . September 2017
 
 Neue Teilnehmer sind herzlich willkommen!
 
@@ -32,15 +32,15 @@ Matthias Pfeifer (Bücherhalle Neugraben), Tel. 701 76 22 Stephan Kaiser
 Mitglieder der Arbeitsgruppe stehen 2017 an folgenden Sonnabenden in der
 Zeit von 10:00-12:00 Uhr zum Kennenlernen des Archivs zur Verfügung:
 
--   3\. Juni
--   1\. Juli
+-   3 . Juni
+-   1 . Juli
 
 ## Themenabende
 
-Wir verweisen auf die Informationen auf unserer Internet-Präsenz
+Wir verweisen auf die Informationen auf unserer Internet-Präsenz:
 [www.suederelbe-archiv.de](http://www.suederelbe-archiv.de).
 
 ## Stadtteilrundgänge:
 
-Die aktuellen Termine für 2017 finden Sie auf
+Die aktuellen Termine für 2017 finden Sie auf:
 [www.suederelbe-archiv.de](http://www.suederelbe-archiv.de).
