--- a/cleaned/8.md
+++ b/cleaned/8.md
@@ -4,9 +4,9 @@ Kulturhaus Süderelbe e.V. | Am Johannisland 2 | 21147 Hamburg
 
 ## Anmeldungen und Infos
 
-Tel.: 040 - 796 72 22 
-Fax: 040 - 796 00 48 
-Email: <info@kulturhaus-suederelbe.de> 
+Tel.: 040 - 796 72 22  
+Fax: 040 - 796 00 48  
+Email: <info@kulturhaus-suederelbe.de>  
 Büro: Mo bis Fr 09:30 bis 14:30 Uhr, außer Mi
 
 [**Anmeldeformular finden Sie hier zum
@@ -14,14 +14,13 @@ Download**](/data/Kursanm_14.pdf)
 
 ## Kontodaten
 
-Konto Nr.: 1087 210 793, IBAN: DE25200505501087210793 bei der 
+Konto Nr.: 1087 210 793, IBAN: DE25200505501087210793 bei der  
 Haspa, BLZ: 200 505 50, BIC: HASPDEHHXXX
 
 ## Das Team des Kulturhauses
 
 Jan Pastoors, Dipl.-Ing.
 :   Geschäftsführung
-:   
 :   <info@kulturhaus-suederelbe.de>
 
 Dörte Ellerbrock
@@ -58,12 +57,20 @@ Winfried Wöhlke
 
 ## Impressum
 
-Kulturhaus Süderelbe e.V. 
-Vereinsregister: Amtsgericht Hamburg, VR Nr. 8326 
-Vertretungsberechtigt: Hannelore Bobeck-Niculescu, Stephan Kaiser 
-Steuernr. 17/432/05266, Finanzamt Hamburg-Nord
+Kulturhaus Süderelbe e.V.
+:   
 
-### Webseite
+Vereinsregister
+:   Amtsgericht Hamburg, VR Nr. 8326
+
+Vertretungsberechtigt
+:   Hannelore Bobeck-Niculescu, Stephan Kaiser
+
+Steuernummer
+:   17/432/05266
+:   Finanzamt Hamburg-Nord
+
+## Webseite
 
 Leila Marketta Eksymä und Dörte Ellerbrock
 
