fix heading levels

--- a/cleaned/20.md
+++ b/cleaned/20.md
@@ -19,9 +19,7 @@ gegeben.
 
 liest Dieter Wehrbrink gemeinsam mit Gunter Miedeck aus dem Buch von
 
-#### Elizabeth George
-
-### Vergiss nie, dass ich dich liebe
+#### Elizabeth George: Vergiss nie, dass ich dich liebe
 
 ![](/img/wsb_294x137_maxresdefault.jpg)
 
