--- a/cleaned/archiv/18.md
+++ b/cleaned/archiv/18.md
@@ -18,13 +18,12 @@ diesem Thema angenähert und sie in Malereien umgesetzt.
 Am Donnerstag, den 5. September, ist der Künstler anwesend und steht für
 Fragen zur Verfügung.
 
-![](/img/wsb_373x280_Wilhelmsburg_am+Kanal+reduziert.jpg)
-
+![Wilhelmsburg am Kanal](/img/wsb_373x280_Wilhelmsburg_am+Kanal+reduziert.jpg)
 Wilhelmsburg am Kanal
 
-![](/img/wsb_371x279_Ernst-August-Schleuse+reduziert.jpg)
+![Ernst-August-Schleuse](/img/wsb_371x279_Ernst-August-Schleuse+reduziert.jpg)
 Ernst-August-Schleuse
 
-![](/img/wsb_444x216_handykids-2+reduziert.jpg)
-
+![Handykids](/img/wsb_444x216_handykids-2+reduziert.jpg)
 Handykids
+
