--- a/cleaned/archiv/30.md
+++ b/cleaned/archiv/30.md
@@ -5,38 +5,30 @@
 ![](/img/wsb_484x338_Flyer_ein+Srau$C3$9F_+$282$29+1.jpg)
 
 Regie
-
-Lars Ceglecki
+:   Lars Ceglecki
 
 Es spielen
-
-Melanie Weirather
-
-Maik Möller
-
-Thomas Nestler
-
-Ulrike Kohl
+:   Melanie Weirather
+:   Maik Möller
+:   Thomas Nestler
+:   Ulrike Kohl
 
 Idee / Umsetzung / Geschichte / Text u.a.
-
-Melanie Weirather und Maik Möller
+:   Melanie Weirather
+:   Maik Möller
 
 Musik
-
-Thomas Nestler und Ulrike Kohl
+:   Thomas Nestler
+:   Ulrike Kohl
 
 Gesang
-
-Ulrike Kohl
+:   Ulrike Kohl
 
 Am Saxophon
-
-Thomas Nestler
+:   Thomas Nestler
 
 Am Löffel
-
-Trudi Trudering
+:   Trudi Trudering
 
 Ein Stück über die Liebe und das Leben mit all seinen Facetten. Trudi
 ist eine junge Frau aus Byern, die sich auf dem Weg nach Hamburg macht,
