--- a/cleaned/kursangebot/39.md
+++ b/cleaned/kursangebot/39.md
@@ -18,7 +18,7 @@ werden.
 Mehr Infos finden Sie hier:
 [www.hamburg.de/bildungspaket/](http://www.hamburg.de/bildungspaket/)
 
-### Montag
+##### Montag
 
 #### Ölmalerei
 
@@ -70,7 +70,7 @@ Kursleitung
 Kursgebühr
 :   130,- € für 15 Male
 
-### Montag / Donnerstag
+##### Montag / Donnerstag
 
 #### Gitarrenunterricht
 
@@ -134,7 +134,7 @@ Kursleitung
 Kursgebühr
 :   60,- € monatlich für 18 Male 1/2 Stunde Einzelunterricht / Semester
 
-### Montag / Freitag
+##### Montag / Freitag
 
 #### Keramik (Aufbautechnik)
 
@@ -227,7 +227,7 @@ Termine
 Kursleitung
 :   Elisabeth Trudzinski
 
-### Dienstag / Mittwoch
+##### Dienstag / Mittwoch
 
 #### Klavier / Gesang
 
@@ -252,7 +252,7 @@ Kursgebühr
 
 Für Kinder ist die Abrechnung über das "Bildungspaket" möglich.
 
-### Mittwoch
+##### Mittwoch
 
 #### Kindermalschule
 
@@ -289,7 +289,7 @@ Termine
 Kursleitung
 :   Henry Holland
 
-### Mittwoch / Donnerstag
+##### Mittwoch / Donnerstag
 
 #### Holzbildhauerei
 
@@ -327,7 +327,7 @@ Kursleitung
 Kursgebühren
 :   145,- € für 15-18 Male je nach Gruppengröße
 
-### Mittwoch / Freitag
+##### Mittwoch / Freitag
 
 #### Aquarellmalerei
 
@@ -356,7 +356,7 @@ Kursleitung
 Kursgebühr
 :   120,- €
 
-### Donnerstag
+##### Donnerstag
 
 #### Stillleben, Zeichnen und mehr
 
@@ -470,7 +470,7 @@ Kursgebühr
 
 Abrechnung über das Bildungspaket möglich!
 
-### Freitag
+##### Freitag
 
 #### Feldenkrais / VHS-Kurs
 
