--- a/cleaned/50.md
+++ b/cleaned/50.md
@@ -20,7 +20,7 @@ aufwachsen.
 
 Kontakt: Wiebke Heinrich, <juneejah@gmail.com>
 
-### Aufführung der Weltenspringer
+## Aufführung der Weltenspringer
 
 am 25. Juni 2017 um 16 Uhr  
 im Rieckhof  
