--- a/20.md
+++ b/20.md
@@ -15,13 +15,11 @@ gegeben.
 (Min.
 8.38)](http://www.hamburg1.de/sendungen/18/4575/Gymnasium_Finkenwerder_zeigt_Courage_Literaturcafe_im_Striepensaal.html)
 
-## Am Sonntag, den 2. Juli 2017 um 16 Uhr
+## Am Sonntag, den 6. August 2017 um 16 Uhr
 
-liest Dieter Wehrbrink gemeinsam mit Gunter Miedeck aus dem Buch von
+liest Dieter Wehrbrink eine Auswahl der legendärsten Rezitationen von Klaus Kinski
 
-#### Elizabeth George: Vergiss nie, dass ich dich liebe
-
-![](/img/wsb_294x137_maxresdefault.jpg)
+![](/img/jkhbw2.jpg)
 
 **Herzlich willkommen, der Eintritt ist frei!**
 
