--- a/26.md
+++ b/26.md
@@ -23,15 +23,11 @@ Dauer ca. 40 Min.
 **Jeweils um 11 und um 15 Uhr**  
 Voranmeldung für Gruppen erforderlich
 
-Folgende Termine sind geplant, nähere Informationen folgen:
+## Termine
 
--   Sonntag, 15. Oktober 2017 um 11 Uhr und um 15 Uhr
--   Sonntag, 5. November 2017 um 11 und um 15 Uhr
--   Sonntag, 3. Dezember 2017 um 11 und um 15 Uhr
--   Sonntag, 7. Januar 2018 um 11 und um 15 Uhr
--   Sonntag, 4. Februar 2018 um 11 und um 15 Uhr
--   Sonntag, 4. März 2018 um 11 und um 15 Uhr
--   Sonntag 8. April 2018 um 11 und um 15 Uhr
+15. Okt. 2017 bis 08. April 2018
+
+![Termine](/img/wsb_428x909_Harburg+Neugraben+hinten+2017_druck.jpg)
 
 [www.kollin-kläff.de](http://www.xn--kollin-klff-t8a.de)
 
