--- a/archiv/13.md
+++ b/archiv/13.md
@@ -1,14 +1,14 @@
-# Cajon Bau&Spiel-Workshop
+# Cajon Bau&Spiel-Workshop am 12. Nov. 2017
 
 ![](/img/wsb_282x267_Kachel+Sanna-20091022-578x-$C2$AEPollert-5x5.jpg)
 
-**Am Sonntag, den 06.11.2016** findet wieder ein Cajon-Workshop mit
+**Am Sonntag, den 12.11.2017** findet wieder ein Cajon-Workshop mit
 Cajonbau und Cajonspielen statt.
 
-Von 9.00-11.00 Uhr kann ein Cajon unter der Leitung von Sanna Hallmann
+Von 10.00-12.00 Uhr kann ein Cajon unter der Leitung von Sanna Hallmann
 gebaut werden; besondere Vorkenntnisse sind dabei nicht erforderlich.
 
-**Von 11.30 bis 15.00 Uhr** vermittelt Martin Röttger AnfängerInnen und
+**Von 12.30 bis 16.00 Uhr** vermittelt Martin Röttger AnfängerInnen und
 TeilnehmerInnen mit Vorkenntnissen im Spiel-Workshop Schlagtechniken,
 Schlagzeug-Sound und die Nutzung des Cajon als rhythmische Basis für
 andere Instrumente. Es werden auf Wunsch auch die Themen
