--- a/17.md
+++ b/17.md
@@ -1,35 +1,34 @@
-# Kulturtage Süderelbe 2017
+# Kulturtage Süderelbe 2017 - 03. Nov. bis 19. Nov. - Machen Sie mit!
 
 ![](/img/wsb_432x142_Kulturtage+Kopie.jpg)
 
 Seit sieben Jahren führt unser Kulturhaus Süderelbe als Koordinator und
-Organisator die vielen kulturellen Einzelveranstaltungen im Süerelberaum
+Organisator die vielen kulturellen Einzelveranstaltungen im Süderelberaum
 im Rahmen der Kulturtage zu einem beeindruckenden Ganzen zusammen.
 
 Die "Kulturtage Süderelbe 2017“ finden  
 **von Fr, den 3. Nov. bis So, den 19. Nov. 17**  
 statt, diesmal eine Dauer von rund zwei Wochen.
 
-Mit den Kulturtagen möchten wir zusammen mit Ihnen einen Querschnitt des
-vielfältigen kulturellen Lebens in unserer Region zeigen und ein
-Programm gestalten, das in diesem Zeitraum Kultur in Süderelbe
-widerspiegelt und viele Besucher anzieht. Ihren Programmbeitrag, sowohl
-als erfahrener lokaler Kulturveranstalter als auch als Amateur, nehmen
-wir gerne im Kulturtage- Programmflyer, der dann von uns intensiv
-beworben wird, auf.
 
-Meldungen zu Beiträgen sind bereits jetzt, unter
-<info@kulturhaus-suederelbe.de> sehr willkommen!
+Unsere gemeinsamen „Kulturtage Süderelbe“ in den vergangenen Jahren haben gezeigt,
+wie vielfältig das kulturelle Angebot in unserer Region ist! Wir würden uns sehr
+freuen, wenn Sie mit Ihrem Programmbeitrag dieses besondere Kulturfestival auch
+in diesem Jahr unterstützen möchten.
 
-Unterstützen Sie uns und machen Sie mit! Ob Lesung, Konzert,
-Ausstellung, Performance, Theaterstück oder Tanzveranstaltung - bringen
-Sie Ihre Veranstaltung auf die „Bühne“ der Kulturtage!
+Bitte machen Sie mit und bringen Sie Ihre Veranstaltung auf die Bühne der
+Kulturtage - ob Lesung, Konzert, Ausstellung, Performance, Theaterstück oder
+Tanzveranstaltung – als Amateur oder Profi, und geben Sie uns Ihren Programmbeitrag
+unter info@kulturhaus-suederelbe.de, möglichst noch vor den Sommerferien durch,
+spätestens aber bis zum 8. Sept. 17.
+
+Es wird dann wieder einen Kulturtage-Programmflyer geben, der von uns intensiv
+beworben wird.
 
 [Das Kulturtage-Programm 2016 finden Sie hier zur
 Ansicht](/data/Flyer+Kulturtage_011116.pdf)
 
-„Kulturtage Süderelbe 2016“ zeigten wieder, wie vielfältig das
-kulturelle Angebot in unserer Region ist! Allen Mitwirkenden sagen wir
+Allen Mitwirkenden sagen wir
 ein riesiges Dankeschön!
 
 ![](/img/wsb_511x239_Kulturtage_2016.jpg)
