--- a/archiv/36.md
+++ b/archiv/36.md
@@ -1,17 +1,21 @@
-# Theater Mär: "Die Königin der Farben"
+# Theater Mär: "Obstgärtchen" am 24. Okt. 17
 
-## Am Donnerstag, 17. März 16 um 11.00 Uhr
+## Am Dienstag, 24. Oktober 17 um 11.00 Uhr
 
-**FÜR GRUPPEN AUSVERKAUFT!**  
-Eintritt für einzelne Besucher noch möglich
+![](/img/wsb_441x564_Plakat_web.jpg)
 
-![](/img/wsb_514x725_K$C3$B6nigin.jpg)
+### Theater für Kinder ab 3  Jahren nach einem Brettspiel von HABA
 
-### Erzähltheater für Klein und Gross ab 4 Jahren
+Mit Musik und Theaterspiel, mit gemeinsamen Entscheidungen und Fantasie ist das
+beliebte HABA-Brettspiel durch Theater Mär für die Bühne umgesetzt. Der Gärtner
+steht in seinem Obstgärtchen und möchte Kirschen ernten. Dabei braucht er die
+Hilfe und die Ideen der Kinder, denn zusammen geht immer alles besser. 
+Die Zuschauer stehen dem Spieler beratend zur Seite, sind aufgefordert mit zu
+überlegen, welche Sache er als nächstes ausprobieren soll. Aber dann ist da noch
+der Rabe, der ebenfalls versucht, an die Früchte heran zu kommen.  Wie werden sie
+es schaffen, vor ihm am Ziel zu sein?
 
-Traum und Wirklichkeit verschmelzen in dieser warmherzigen Geschichte um
-eine Königin, die das sanfte Blau, das wilde Rot und das warme aber auch
-manchmal zickige Geld beherrscht. Bis alles durcheinander gerät...
+Ein Theaterspiel mit immer wieder neuem Ausgang.
 
 **Kulturhaus Süderelbe e.V.**  
 Schulaula BGZ Süderelbe  
@@ -19,34 +23,29 @@ Am Johannisland 4
 21147 Hamburg  
 (Direkt an der S-Bahn Neugraben)  
 
-**Eintritt:** 4,50 € an der Tageskasse  
+**Eintritt:** 5 € an der Tageskasse  
 **Für Gruppen ausverkauft!**  
 **Dauer:** 45 Min.
 
-Königin
-:   Marcella Ruscingo
-:   Frauke Ruberth
+Eine Kooperation mit Theaterdeck Hamburg.
 
-Erzähler
+Stück & Regie
+:   Frauke Rubarth
+
+Theater- & Spielpädagogik
+:   Lara Goldstein
+
+Spiel
 :   Peter Markhoff
-:   Thomas Nestler
-
-Regie
-:   Marc Lowitz
-
-Stückfassung
-:   Marc Lowitz
-:   Peter Marchoff
 
 Musik
-:   Thomas Pohle
+:   Anne Wiemann
 
-Illustrarorin
-:   Jutta Bauer
+Bühne
+:   Timo Gniesmer
+
+Spielberatung
+:   Catrin Markhoff
 
 Verlag
-:   Beltz & Gelberg
-
-Fotos
-:   Oliver Fantitsch
-
+:   HABA
