--- a/kursangebot/39.md
+++ b/kursangebot/39.md
@@ -384,7 +384,7 @@ Dietwalt Mauruschat, freier Musiker und Spezialist für Violine, Viola
 und Gesang, ist viel auf Konzert- und Opernbühnen unterwegs. Er
 unterrichtet außer im Kulturhaus an vielen Orten Hamburgs.
 
-![](/img/wsb_183x128_WEBGeige.jpg)
+![](/img/KHS4 001.JPG)
 
 Beginn
 :   Donnerstag, 2.9.17; Uhrzeiten nach Absprache
