--- a/kursangebot/39.md
+++ b/kursangebot/39.md
@@ -413,7 +413,7 @@ Stress ab und macht einfach Spaß.
 Aus dem Yoga werden intensive Körperübungen zur Dehnung und Kräftigung
 der Muskulatur kombiniert. Erholsame Entspannung rundet den Abend ab.
 
-![](/img/wsb_166x182_WEBYoga+neu.jpg)
+![](/img/Energy%20Dance%20und%20Yoga-Kulturhaus_01.jpg)
 
 Beginn
 :   Donnerstag, 2.2.17, von 19.30-21.30 Uhr
