--- a/kursangebot/39.md
+++ b/kursangebot/39.md
@@ -210,7 +210,7 @@ gebracht.
 
 Aktzeichnen ist die Grundlage für jede Art der figürlichen Darstellung!
 
-![](/img/wsb_170x118_Fr$C3$BChlingsfest_2007+019.jpg)
+![](/img/ruecken.jpg)
 
 Beginn
 :   Dienstag, 7.2.17, von 18.30-21.30 Uhr
