--- a/11b_kursangebot/39.md
+++ b/11b_kursangebot/39.md
@@ -75,7 +75,7 @@ Kursgebühr
 #### Gitarrenunterricht
 
 Peter Karliczek unterrichtet seit vielen Jahren E-Bass, akustische und
-E-Gitarre im Kulturhaus. Er arbeitet nch Tabulatur und frei.
+E-Gitarre im Kulturhaus. Er arbeitet nach Tabulatur und frei.
 Liedbegleitung, Rhythmik, Timing und Fingerfertigkeit sind
 Themenschwerpunkte des Unterrichts.
 
@@ -91,7 +91,7 @@ E-Bass
 :   Einzelunterricht eine halbe Stunde. Bevorzugt Blues, Funk und
     Groove.
 
-![](/img/wsb_132x132_Kachel+Gitarre.jpg)
+![](/img/khs3%20078.jpg)
 
 Beginn
 :   Donnerstag 2.2.17 von 14.30-22.00 Uhr
