--- a/11b_kursangebot/39.md
+++ b/11b_kursangebot/39.md
@@ -455,7 +455,7 @@ Breakdance zur Schulung verschiedener Bewegungsqualitäten bis hin zur
 Akrobatik und die freie Improvisation zur Förderung von
 Selbstständigkeit, Kreativität und Ausdrucksfähigkeit.
 
-![](/img/wsb_138x153_Kindertanz+Web.jpg)
+![](/img/_DSC4142.jpg)
 
 Für Kinder ab 3 Jahre
 
