--- a/11b_kursangebot/39.md
+++ b/11b_kursangebot/39.md
@@ -5,7 +5,7 @@
 ![](/img/wsb_518x212_Programm_2016_Deckblatt.jpg)
 
 Unser Programmflyer hier zum Download: [Kursprogramm
-2016/2017](/data/Programm_2016.pdf)
+2016/2017](/downloads/Programm_2016.pdf)
 
 Kursdauer / Semester ist 18x3 Zeitstunden, wenn nicht anders angegeben.
 Wir bitten um Verständnis, dass bei zu niedriger Teilnehmerzahl der
