--- a/8.md
+++ b/8.md
@@ -10,7 +10,7 @@ Email: <info@kulturhaus-suederelbe.de>
 Büro: Mo bis Fr 09:30 bis 14:30 Uhr, außer Mi
 
 [**Anmeldeformular finden Sie hier zum
-Download**](/data/Kursanm_14.pdf)
+Download**](/downloads/Kursanm_14.pdf)
 
 ## Kontodaten
 
@@ -42,7 +42,7 @@ Durchführung einzelner Veranstaltungen mitwirken.
 ehrenamtlichen Einsatz und Unterstützung!**
 
 [**Antragsformular auf Mitgliedschaft in userem Verein finden Sie hier
-zum Download**](/data/Beitritserkl$C3$A4rung_Einz_aktuell.pdf)
+zum Download**](/downloads/Beitritserkl$C3$A4rung_Einz_aktuell.pdf)
 
 ## Der Vereinsvorstand (Ehrenämter)
 
