--- a/12.md
+++ b/12.md
@@ -1,19 +1,11 @@
 # Ausstellungen
-
-## Aktuelle Ausstellung
-
-![](/img/wsb_329x421_Dimitar+Georgiev+-+Fotoausstellung++-+Flyer+$28Version+3.0$29+$28Britannic+Bold$29+$282017.05.17$29.jpg)
-
-Dimitar Georgiev, Kursleiter im Bereich Saxofon, Klarinette und Klavier
-im Kulturhaus, ist viel in der Welt herumgekommen und hatte meistens
-seine Kamera dabei. Es sind beeindruckende Bilder entstanden, die sich
-sehen lassen können.
-
-### Vernissage am Donnerstag, den 1.6.17 ab 19 Uhr
-
-Der Künstler ist anwesend und hat sein Saxofon dabei.
+## Nächste Ausstellung
+Angelika Holzmann, Kursleiterin für Aquarellmalerei, stellt ihre Bilder vom 11.9.-13.10.17 aus.
+Vernissage ist am Freitag, den 8.9.17, ab 19 Uhr
 
 ## Vergangene Ausstellungen
+
+![](/img/wsb_329x421_Dimitar+Georgiev+-+Fotoausstellung++-+Flyer+$28Version+3.0$29+$28Britannic+Bold$29+$282017.05.17$29.jpg)
 
 KursleiterInnen, die alle freie bildende Künstler sind, stellen im Foyer
 des Kulturhauses aus.
