typografisch korrekte Anführungszeichen

--- a/archiv/16.md
+++ b/archiv/16.md
@@ -1,7 +1,7 @@
 # Theatergruppe im Aufbau
 
 Initiator und Regisseur für eine neue Laien-Theatergruppe im Kulturhaus
-ist Harry Thomßen, bekannt durch seine Arbeit mit dem "Theatersündikat"
+ist Harry Thomßen, bekannt durch seine Arbeit mit dem „Theatersündikat“
 aus Harburg und anderen Projekten.
 
 Am neuen Standort des Kulturhauses Süderelbe in Neugraben ist es nun
