--- a/archiv/22.md
+++ b/archiv/22.md
@@ -5,7 +5,7 @@
 ### am Samstag, den 30. Mai ab 14 Uhr
 
 Am Samstag, den 30. Mai, veranstaltet das Kulturhaus Süderelbe ab 14 Uhr
-seinen jährlichen "Tag der offenen Tür" mit Ausstellungen von
+seinen jährlichen „Tag der offenen Tür“ mit Ausstellungen von
 Kursleitern und KursteilnehmerInnen aus dem Bereich bildende Kunst.
 
 Die Trommelgruppe des Kulturhauses eröffnet mit Robert Laryea um 14 Uhr
