--- a/archiv/23.md
+++ b/archiv/23.md
@@ -1,13 +1,13 @@
-# Vernissage und Lesung: "Geschichten aus fünf Jahrhunderten"
+# Vernissage und Lesung: „Geschichten aus fünf Jahrhunderten“
 
 ## am 21. Oktober um 19.00 Uhr
 
 ![](/img/wsb_463x656_Kulturpinsel.jpg)
 
-Zwei Malgruppen des Kulturhauses, die Aquarellgruppe "Kulturpinsel"
+Zwei Malgruppen des Kulturhauses, die Aquarellgruppe „Kulturpinsel“
 (Kurstermin mittwochs 18-21 Uhr, Leitung: Elke Nack-Karstens) und die
 Ölmalgruppe (Kurstermin montags 10-13 Uhr, Leitung: Margrit Werner)
-entwarfen Bilder für das Jubiläumsbuch "500 Jahre Neugraben", die in der
+entwarfen Bilder für das Jubiläumsbuch „500 Jahre Neugraben“, die in der
 Ausstellung zu sehen sind.
 
 Uwe Michelau wird Auszüge aus dem Jubiläumsbuch lesen. Das Buch ist im
