--- a/archiv/30.md
+++ b/archiv/30.md
@@ -1,4 +1,4 @@
-# Walking Actors: "Ein bunter Strauß voll Leben"
+# Walking Actors: „Ein bunter Strauß voll Leben“
 
 ## Am 8. Nov. 2014 um 19 Uhr
 
@@ -39,7 +39,7 @@ Hütchenspieler Hannes Hamburg sowie die singende Nachtigall Kiki LaRose
 und den Psychologen Lübbke.
 
 Ob das Leben ihr in Hamburg schöne, strahlende und überraschende oder
-auch traurige Momente verschaffen wird, erzählen die "Walking Actors" in
+auch traurige Momente verschaffen wird, erzählen die „Walking Actors“ in
 einer heiteren aber auch zum Nachdenken anregenden Geschichte.
 
 Hier ist für jeden etwas dabei: Ein bunter Strauß voll Theater, Musik
