--- a/archiv/32.md
+++ b/archiv/32.md
@@ -22,11 +22,11 @@ lässt immer häufiger von sich reden. Das Trio nennt seine Musik "Rocking
 Roots'n'Rhythm" und bewegt sich in der Crossover-Zone zwischen
 archaischem Blues, Funk und Rock'n Roll.
 
-"Was die Faszination von "BluesCulture" ausmacht, ist diese magische,
-ungekünstelte Authentizität, die das Trio mit seiner Musik entfacht.
-Statt steriler Perfektion setzen die drei auf pure, vertonte Emotion,
-verbunden mit einer auf schier blindem gegenseitigen Verständnis
-basierenden musikalischen Interaktion."
+> Was die Faszination von „BluesCulture“ ausmacht, ist diese magische,
+  ungekünstelte Authentizität, die das Trio mit seiner Musik entfacht.
+  Statt steriler Perfektion setzen die drei auf pure, vertonte Emotion,
+  verbunden mit einer auf schier blindem gegenseitigen Verständnis
+  basierenden musikalischen Interaktion.
 
 **Kulturhaus Süderelbe**  
 Am Johannisland 2-4  
