--- a/archiv/36.md
+++ b/archiv/36.md
@@ -1,4 +1,4 @@
-# Theater Mär: "Obstgärtchen" am 24. Okt. 17
+# Theater Mär: „Obstgärtchen“ am 24. Okt. 17
 
 ## Am Dienstag, 24. Oktober 17 um 11.00 Uhr
 
