--- a/archiv/47.md
+++ b/archiv/47.md
@@ -6,7 +6,7 @@
 
 ![](/img/wsb_466x202_presse+bild.jpg)
 
-Während der "Chinatime", mit der die Hansestadt Hamburg ihre langjährige
+Während der „Chinatime“, mit der die Hansestadt Hamburg ihre langjährige
 Partnerschaft mit China feiert, finden drei Ausstellungen einer
 Künstlergruppe der Gesellschaft für Deutsch-Chinesischen-Kulturaustausch
 statt - eine davon im Kulturhaus Süderelbe. Die Gruppe zeigt nach
