--- a/archiv/48.md
+++ b/archiv/48.md
@@ -4,7 +4,7 @@
 
 ## Montag, den 31.10.16, um 19 Uhr, im Kulturhaus Süderelbe.
 
-Nach seiner erfolgreichen Ausstellung "Leben auf der Flucht", die auf
+Nach seiner erfolgreichen Ausstellung „Leben auf der Flucht“, die auf
 ihrer Tour durch ganz Deutschland auch im Kulturhaus Süderelbe zu sehen
 war, ist Mirco Keilberth wieder in Neugraben. Der
 Nordafrika-Korrespondent berichtet seit 2006 u.a. dem Magazin Der
