--- a/archiv/49.md
+++ b/archiv/49.md
@@ -11,7 +11,7 @@ organisieren einhundert Hamburger Schüler an zwölf ausgewählten Orten
 Konzerte für junge und junggebliebene Hörer.
 
 Die MusikerInnen sind alle unter 21 Jahre und sehr talentiert. In
-"zwölf.Orte / Klassik in deinem Kiez" entwickeln Schülermanager
+„zwölf.Orte / Klassik in deinem Kiez“ entwickeln Schülermanager
 Konzertkonzepte gemeinsam mit ihren PatenmusikerInnen, kümmern sich um
 Marketingideen, Werbekampagnen und Durchführungskonzepte. Wie im letzten
 Jahr findet auch 2016 eines der Konzerte in der Aula des BGZ Süderelbe,
@@ -27,7 +27,7 @@ geboren wurde. U.a. war er 2014/15 Jungstudent an der Musikhochschule
 Frankfurt am Main in der Klavierklsse von Prof. Oliver Kern, tourte mit
 Konzerten auch nach Chile, Finnland, Frankreich, Italien und Tschechien,
 gewann etliche Preise (z.B. ist er achtfacher Bundespreisträger von
-"Jugend Musiziert" und gewann den ersten Preis 2012 des
+„Jugend Musiziert“ und gewann den ersten Preis 2012 des
 Tonkünstlerwettbewerbs Baden-Würtemberg).
 
 ![](/img/tonali+soos.jpg)
