--- a/archiv/51.md
+++ b/archiv/51.md
@@ -40,8 +40,8 @@ Im Rahmen der Veranstaltung spielt Eberhard Apffelstaedt am Klavier
 einige Stücke eines mit ihm befreundeten finnischen Musikers.
 
 Es verspricht ein fröhlicher Vormittag zu werden! In der Pause gibt es
-außer Kaffee und Kuchen auch finnische Spezialitäten, wie "korvapuusti"
-und "karjalanpiirakka".
+außer Kaffee und Kuchen auch finnische Spezialitäten, wie „korvapuusti“
+und „karjalanpiirakka“.
 
 **Der Eintritt ist frei.**
 
