--- a/archiv/7.md
+++ b/archiv/7.md
@@ -1,6 +1,6 @@
 # Mosaikwand
 
-## "Mit Künstlern arbeiten, von Künstlern lernen"
+## „Mit Künstlern arbeiten, von Künstlern lernen“
 
 ![](/img/wsb_177x116_spiegel-Drache_einl128.jpg)
 ![](/img/wsb_170x116_spiegel-Drache_einl126.jpg)
