--- a/archiv/52.md
+++ b/archiv/52.md
@@ -1,9 +1,9 @@
 # Südlesetage
 
-Wie im letzten Jahr begonnen, werden auch 2017 die **"Südlese-Tage"**
+Wie im letzten Jahr begonnen, werden auch 2017 die **„Südlese-Tage“**
 durchgeführt.
 
-"Zu zweit liest es sich am Schönsten", sagen Dörte Ellerbrock und Dieter
+„Zu zweit liest es sich am Schönsten“, sagen Dörte Ellerbrock und Dieter
 Wehrbrink, die sich wunderbar ergänzen, wenn es um Stimme und
 Sprachrhythmus geht.
 
@@ -11,7 +11,7 @@ Sprachrhythmus geht.
 
 ## Am 29.3.17 um 19 Uhr
 
-lesen die beiden **"Jeder kämpft für sich allein" von Nina Dörmann** ein
+lesen die beiden **„Jeder kämpft für sich allein“ von Nina Dörmann** ein
 Zweipersonenstück über Vorurteile und Schwarz-Weiß-Denken.
 
 Die Namen der Protagonisten Johanna Schwarz und Sahil Bakshi sagen
