Seite Archiv überarbeitet

--- a/archiv/30.md
+++ b/archiv/30.md
@@ -1,55 +1,29 @@
-# Walking Actors: „Ein bunter Strauß voll Leben“
+# Auf gute Nachbarschaft! "Willkommen in Süderelbe" lädt ein am 16. Nov. um 19 Uhr
 
-## Am 8. Nov. 2014 um 19 Uhr
+![](/img/LogoCafe.jpg)
 
-![](/img/wsb_484x338_Flyer_ein+Srau$C3$9F_+$282$29+1.jpg)
+Liebe Nachbarn,
 
-Regie
-:   Lars Ceglecki
+die Initiative "Willkommen in Süderelbe" engagiert sich seit über zwei Jahren mit mehr als 100 Aktiven
+für die Integration der bei uns im Stadtteillebenden Geflüch­ teten. Denn für gute Nachbarschaft braucht es 
+aktive Nachbarinnen und Nachbarn, die offen und neugierig aufeinander zugehen und den Alltag miteinander anpacken 
+und gestalten. Der Lohn unserer Arbeit: Das Zusammenleben mit den Bewohnern der beiden Folgeunterkünfte verläuft 
+weitgehend friedlich und problemlos. Zusätzlich zum bürgerschaftliehen Engagement sind übrigens viele persönliche
+und bereichernde Verbindungen zu Nachbarn und zu neuen Bewohnern entstan­ den: Unsere Initiative mit ihren 
+ca. 10 Arbeitsgruppen ist eine wahre Kontaktbörse.
 
-Es spielen
-:   Melanie Weirather
-:   Maik Möller
-:   Thomas Nestler
-:   Ulrike Kohl
+Am 16.11. gibt es die Möglichkeit, sowohl Ehrenamtliche als auch Neuankömmlinge kennenzulernen und ganz unverbindlich
+mehr über die Arbeit unserer Gruppen zu erfahren - von den Deutschkursen über die "Behördenhelfer" und die "Fahrrad­ schrauber"
+bis zu den Paten und der Bastelgruppe.
 
-Idee / Umsetzung / Geschichte / Text u.a.
-:   Melanie Weirather
-:   Maik Möller
+Wir laden Sie herzlich ein und würden uns sehr freuen, Sie am 16.11. begrüßen zu können.
 
-Musik
-:   Thomas Nestler
-:   Ulrike Kohl
+Falls Sie Interesse an unserer Arbeit haben, aber am 16.11. nicht können: Immer montags von 15 bis 17 Uhr 
+kann man im "Cafe Welcome" im BGZ alte und neue Neugrabener treffen.
 
-Gesang
-:   Ulrike Kohl
+Informationen gibt es außerdem unter www.insuederelbe.de
 
-Am Saxophon
-:   Thomas Nestler
+Mit freundlichem Gruß
+für das Leitungsteam der Initiative
 
-Am Löffel
-:   Trudi Trudering
-
-Ein Stück über die Liebe und das Leben mit all seinen Facetten. Trudi
-ist eine junge Frau aus Byern, die sich auf dem Weg nach Hamburg macht,
-um dort ihr Glück zu finden. Dort trifft sie auf viele Menschen, die
-ihren Weg zum Glück beeinflussen.Wie z.B. Ronny aus Sachsen, den
-Casanova Hans Werner Tulpe, den Saxophon spielenden Barkeeper und
-Hütchenspieler Hannes Hamburg sowie die singende Nachtigall Kiki LaRose
-und den Psychologen Lübbke.
-
-Ob das Leben ihr in Hamburg schöne, strahlende und überraschende oder
-auch traurige Momente verschaffen wird, erzählen die „Walking Actors“ in
-einer heiteren aber auch zum Nachdenken anregenden Geschichte.
-
-Hier ist für jeden etwas dabei: Ein bunter Strauß voll Theater, Musik
-(Blues, Jazz, Swing und Hamburger Lieder), Poesie und Comedy.
-
-**Kulturhaus Süderelbe e.V.**  
-Am Johannisland 4  
-Schulaula BGZ  
-21147 Hamburg  
-Tel.: 040-7967222  
-
-**Karten** für 10 € im Vvk: Büro Kulturhaus, FitHus und an der
-Theaterkasse im SEZ Neugraben, Ak: 12 €
+Oliver Domzalski 	Susanne Lindenlaub-Borck
